# edge-ai-smart-home

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: main.cpp
src/Header/: InferenceEngine.h  MQTTClient.h
src/Source/: InferenceEngine.cpp  MQTTClient.cpp
