cmake_minimum_required(VERSION 3.14)
project(SmartHomeGateway)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
add_subdirectory(externals/llama.cpp)
add_executable(gateway src/main.cpp src/Source/InferenceEngine.cpp)
target_link_libraries(gateway PRIVATE llama mosquitto)
target_include_directories(gateway PRIVATE externals/llama.cpp/include usr/include src/Header)